# Soft-LTE

./: README.md  install-enb.sh  install-mme.sh
controller_if/: Makefile  Makefile.in  README.md  config.status  configure  run_controller.sh  tags
controller_if/.deps/: controller.Po
controller_if/autom4te.cache/: output.1  requests  traces.0  traces.1
controller_if/bkp/: a.out  client.c  cnt.cc  enb_emulator.cc  enb_emulator.h  notes.txt  sctp_client.c  sctp_server.c  serv.cc
controller_if/src/: Makefile  Makefile.am  Makefile.in  a.out  controller_if.cc  server.cc
controller_if/src/.deps/: controller_if.Po
trafficgen/: Makefile.am  configure.ac
trafficgen/src/: Makefile.am
vnfs/: tags
vnfs/lib/include/srslte/common/: buffer_pool.h
vnfs/lib/src/asn1/: liblte_mme.cc  liblte_s1ap.cc
vnfs/lib/src/upper/: pdcp.cc  pdcp_entity.cc
vnfs/srsenb/: enb.conf  enb.conf.example  srsLTE.backtrace.crash  tags
vnfs/srsenb/hdr/: controller_if.h  enb.h
vnfs/srsenb/hdr/upper/: s1ap.h
vnfs/srsenb/src/: enb.cc  main.cc
vnfs/srsenb/src/mac/: mac.cc
vnfs/srsenb/src/upper/: .s1ap.cc.swp  rrc.cc  s1ap.cc
vnfs/srsepc/: epc.conf  epc.conf2  run.sh  user_db.csv
vnfs/srsepc/src/hss/: hss.cc
vnfs/srsepc/src/mme/: s1ap_ctx_mngmt_proc.cc  s1ap_nas_transport.cc
vnfs/srsue/: .ctxt  .fftw_wisdom  srsLTE.backtrace.crash  t.sh  tags  ue.conf2
vnfs/srsue/hdr/: ue.h  ue_base.h
vnfs/srsue/hdr/upper/: nas.h  rrc.h
vnfs/srsue/src/: main.cc  ue.cc
vnfs/srsue/src/upper/: gw.cc  nas.cc  rrc.cc  usim.cc
vnfs/srsue/test/upper/: nas_test.cc
(+2 files in other folders)
